--- a/about.html
+++ b/about.html
@@ -42,13 +42,16 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
+
+            <!-- Mobile Menu Toggle -->
             <button class="nav-toggle" aria-label="Open menu">
-                <svg width="24" height="24" viewBox="0 0 24 24">
+                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4 7.5h16v1.5H4z"></path>
                     <path d="M4 15h16v1.5H4z"></path>
                 </svg>
             </button>
 
+            <!-- Main Menu -->
             <ul class="nav-menu">
                 <li><a href="Index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>      
@@ -83,16 +86,7 @@
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
                     </ul>
-                </li>
-
-                
-                <!-- Mobile Menu Toggle -->
-                <button class="nav-toggle" aria-label="Open menu">
-                    <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-                        <path d="M4 7.5h16v1.5H4z"></path>
-                        <path d="M4 15h16v1.5H4z"></path>
-                    </svg>
-                </button>
+                </li>            
 
             </ul>
         </nav>
