--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
             <!-- Main Menu -->
             <ul class="nav-menu">
                 <li><a href="Index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>      
+                <li><a href="about.html">About</a></li>      
                 <li><a href="Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
