Trying Something New

--- a/Adult Experience.html
+++ b/Adult Experience.html
@@ -31,17 +31,19 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
+
+            <!-- Mobile Menu Toggle -->
             <button class="nav-toggle" aria-label="Open menu">
-                <svg width="24" height="24" viewBox="0 0 24 24">
+                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4 7.5h16v1.5H4z"></path>
                     <path d="M4 15h16v1.5H4z"></path>
                 </svg>
-            </button> 
+            </button>
 
             <ul class="nav-menu">
-
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Selfary Expression.html">About</a></li>      
+                <li><a href="Selfary Expression Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
@@ -72,9 +74,7 @@
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
                     </ul>
-                </li>
-
-                <li><a href="Articles.html">Articles</a></li>
+                </li>            
 
             </ul>
         </nav>
