--- a/Cart.html
+++ b/Cart.html
@@ -6,6 +6,70 @@
 </head>
 <body>
 
+<header class="site-header">
+    <div class="site-header-inner">
+
+        <!-- Logo -->
+        <div class="site-title">
+            <a href="index.html">
+                <img src="/images/logo.png" alt="Selfary Expression logo" class="site-logo">
+            </a>
+        </div>
+
+        <!-- Navigation -->
+        <nav class="site-nav">
+
+            <!-- Mobile Menu Toggle -->
+            <button class="nav-toggle" aria-label="Open menu">
+                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+                    <path d="M4 7.5h16v1.5H4z"></path>
+                    <path d="M4 15h16v1.5H4z"></path>
+                </svg>
+            </button>
+
+            <!-- Main Menu -->
+            <ul class="nav-menu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Selfary Expression.html">About</a></li>      
+                <li><a href="Selfary Expression Articles.html">Articles</a></li>
+
+                <!-- EDUCATIONAL ITEMS -->
+                <li class="has-submenu">
+                    <span class="submenu-label">Educational Items</span>
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
+
+                    <ul class="submenu">
+                        <li><a href="Endangered Species.html">Endangered Species</a></li>
+                        <li><a href="Flags.html">Flags</a></li>
+                        <li><a href="Maps.html">Maps</a></li>
+                    </ul>
+                </li>
+
+                <!-- SELF-EXPRESSIVE ITEMS -->
+                <li class="has-submenu">
+                    <span class="submenu-label">Self-Expressive Items</span>
+                    <button class="submenu-toggle" aria-label="Toggle submenu">
+                        <svg width="12" height="12">
+                            <path d="M1.5 4L6 8l4.5-4"></path>
+                        </svg>
+                    </button>
+
+                    <ul class="submenu">
+                        <li><a href="Adult Experience.html">Adult Experience</a></li>
+                        <li><a href="Inner Child.html">Inner Child</a></li>
+                    </ul>
+                </li>            
+
+            </ul>
+        </nav>
+
+    </div>
+</header>
+
   <div class="cart-container">
     <h1>Your Cart</h1>
 
