--- a/Selfary Expression Articles.html
+++ b/Selfary Expression Articles.html
@@ -11,7 +11,7 @@
     <!-- ===========================
          PAGE TITLE
     ============================ -->
-    <title>Home</title>
+    <title>Articles</title>
 
     <!-- ===========================
          STYLESHEETS
@@ -21,9 +21,6 @@
 </head>
 <body>
 
-<!-- ===========================
-     SITE HEADER
-============================ -->
 <header class="site-header">
     <div class="site-header-inner">
 
@@ -42,17 +39,20 @@
 
         <!-- Navigation -->
         <nav class="site-nav">
+
+            <!-- Mobile Menu Toggle -->
             <button class="nav-toggle" aria-label="Open menu">
-                <svg width="24" height="24" viewBox="0 0 24 24">
+                <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
                     <path d="M4 7.5h16v1.5H4z"></path>
                     <path d="M4 15h16v1.5H4z"></path>
                 </svg>
             </button>
 
+            <!-- Main Menu -->
             <ul class="nav-menu">
-
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Selfary Expression.html">About</a></li>      
+                <li><a href="Selfary Expression Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
@@ -83,9 +83,7 @@
                         <li><a href="Adult Experience.html">Adult Experience</a></li>
                         <li><a href="Inner Child.html">Inner Child</a></li>
                     </ul>
-                </li>
-
-                <li><a href="Articles.html">Articles</a></li>
+                </li>            
 
             </ul>
         </nav>
@@ -99,24 +97,55 @@
 <main id="main">
     <div class="content">
 
-        <!-- Page Heading --> 
-        <h2 class="about-heading">Welcome Self-Expressive Peeps</h2>
+        <!-- Page Heading - Insert if Page Title isn't on Page --> 
 
-        <!-- Article Photo -->
-        <figure class="home">
-            <img src="/images/home.png" alt="Home">
+		<h2 class="heading">****************************</h2>
+
+        <p>Articles focus on readers' ability to choose different points of view regarding their thoughts, feelings, and beliefs. This is important for those who are struggling with insecurities, mental illness, doubt in self, or general interest in learning information that may cause a different path of choice.</p>
+
+        <p>After taking in information, the timing of fully understanding that information can happen at any point of our lives - weeks, months, or years in the future. By "fully", I view that as all the different points of view regarding that topic, not only one side or part of it. (if you disagree with something, that is a big indication that you are viewing something partially) The information can also apply to any point of our lives - past, present, or future. Keeping an open mind is the only way to see the different points of view of the information that has been read, listened to, and/or experienced. </p>
+
+        <!-- Article Photos & Links -->
+
+        <!-- Does God Exist or Does He Not? -->
+        <figure class="Does God Exist or Does He Not">
+			<a href="Does God Exist or Does He Not.html">
+				<h2 class="home-heading">Does God Exist or Does He Not?</h2>
+            	<img src="/images/Does God Exist or Does He Not.png" alt="Does God Exist or Does He Not">
+			</a>
         </figure>
 
-        <!-- Article Text -->
-        <p>Free will is the purpose of our experiences. Our experiences, relationships, and environments influence and shape us, leading us to understand new aspects of our "selves".</p>
+        <!-- Timing & Our Online System -->
+        <figure class="home">
+			<a href="All Possibilities or No Possibilities.html">
+				<h2 class="home-heading">All Possibilities or No Possibilities?</h2>
+            	<img src="/images/All Possibilities or No Possibilities.jpg" alt="All Possibilities or No Possibilities?">
+			</a>
+        </figure>
 
-        <ol>
-            <li>Educational Items: Includes any species that has been or currently is threatened / endangered / possibly extinct and is shown on fws.gov.</li>
-            <li>Self-Expressive Adult Items: For select Adult Experience items, you must be <a href="adult-legal-age.html">adult legal age</a> in your state to purchase.</li>
-            <li>Self-Expressive Inner Child Items: Hobbies are important for those peaceful times that we all need nowadays.</li>
-        </ol>
+		<!-- Does Belief Require Choice? -->
+        <figure class="home">
+			<a href="Does Belief Require Choice.html">
+				<h2 class="home-heading">Does Belief Require Choice?</h2>
+            	<img src="/images/Does Belief Require Choice.png" alt="Does Belief Require Choice?">
+			</a>
+        </figure>
 
+		<!-- Does Experience Mean Nothing or Something? -->
+        <figure class="home">
+			<a href="Does Experience Mean Nothing or Something.html">
+				<h2 class="home-heading">Does Experience Mean Nothing or Something?</h2>
+            	<img src="/images/Does Experience Mean Nothing or Something.jpg" alt="Does Experience Mean Nothing or Something?">
+			</a>
+        </figure>
 
+		<!-- Is AI Mimicking Communication or Genuinely Thinking? -->
+        <figure class="home">
+			<a href="Is AI Mimicking Communication or Genuinely Thinking.html">
+				<h2 class="home-heading">Is AI Mimicking Communication or Genuinely Thinking?</h2>
+                <img src="/images/Is AI Mimicking Communication or Genuinely Thinking.png" alt="Is AI Mimicking Communication or Genuinely Thinking?">
+            </a>
+        </figure>
 
     </div>
 </main>
@@ -138,9 +167,9 @@
 </footer>
 
 
-
 <!-- ===========================
      SCRIPTS
 ============================ -->
 
+<script src="floating-cart.js"></script>
 <script src="floating-cart.js"></script>
