--- a/About Selfary Expression.html
+++ b/About Selfary Expression.html
@@ -53,9 +53,9 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>      
-                <li><a href="Articles.html">Articles</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About Selfary Expression.html">About</a></li>      
+                <li><a href="Selfary Expression Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
