--- a/Cart.html
+++ b/Cart.html
@@ -1,8 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Your Cart</title>
-  <link rel="stylesheet" href="style.css">
+
+    <!-- ===========================
+         META & PAGE SETTINGS
+    ============================ -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- ===========================
+         PAGE TITLE
+    ============================ -->
+    <title>Your Cart</title>
+
+    <!-- ===========================
+         STYLESHEETS
+    ============================ -->
+    <link rel="stylesheet" href="/css/style.css">
+
 </head>
 <body>
 
