--- a/adult-legal-age.html
+++ b/adult-legal-age.html
@@ -16,7 +16,7 @@
     <!-- ===========================
          STYLESHEETS
     ============================ -->
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 
 </head>
 <body>
