Changes for menu

--- a/Adult Experience.html
+++ b/Adult Experience.html
@@ -666,6 +666,7 @@ const photos = [
 
 <!-- FLOATING CART -->
 <script src="floating-cart.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
