--- a/Selfary Expression Articles.html
+++ b/Selfary Expression Articles.html
@@ -172,4 +172,4 @@
 ============================ -->
 
 <script src="floating-cart.js"></script>
-<script src="floating-cart.js"></script>
+<script src="main.js"></script>
