--- a/adult-legal-age.html
+++ b/adult-legal-age.html
@@ -202,6 +202,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <!-- FLOATING CART -->
 <script src="floating-cart.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
