--- a/Flags.html
+++ b/Flags.html
@@ -193,6 +193,7 @@ const photos = [
 
 <!-- FLOATING CART -->
 <script src="floating-cart.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
