--- a/Maps.html
+++ b/Maps.html
@@ -187,6 +187,7 @@ const photos = [
 
 <!-- FLOATING CART -->
 <script src="floating-cart.js"></script>
+<script src="main.js"></script>
 
 </body>
 </html>
