--- a/About Selfary Expression.html
+++ b/About Selfary Expression.html
@@ -162,5 +162,5 @@
      SCRIPTS
 ============================ -->
 
-<script src="floating-cart.js"></script>
-<script src="main.js"></script>
+<script src="java/floating-cart.js"></script>
+<script src="java/main.js"></script>
