--- a/About Selfary Expression.html
+++ b/About Selfary Expression.html
@@ -163,4 +163,5 @@
 ============================ -->
 
 <script src="java/floating-cart.js"></script>
-<script src="java/main.js"></script>
+<script type="module" src="/main.js"></script>
+
