--- a/About Selfary Expression.html
+++ b/About Selfary Expression.html
@@ -162,6 +162,6 @@
      SCRIPTS
 ============================ -->
 
-<script src="java/floating-cart.js"></script>
-<script type="module" src="/main.js"></script>
+<script src="/java/floating-cart.js"></script>
+<script type="module" src="/java/main.js"></script>
 
