--- a/Cart.html
+++ b/Cart.html
@@ -196,8 +196,8 @@
 
 
   <!-- Floating Cart Count Script -->
-  <script src="floating-cart.js"></script>
-  <script src="main.js"></script>
+  <script src="/java/floating-cart.js"></script>
+  <script type="module" src="/java/main.js"></script>
 
 
 </body>
