--- a/Endangered Species.html
+++ b/Endangered Species.html
@@ -187,8 +187,9 @@ const photos = [
 <script src="/js/gallery.js"></script>
 
 <!-- FLOATING CART -->
-<script src="floating-cart.js"></script>
-<script src="main.js"></script>
+<script src="/java/floating-cart.js"></script>
+<script src="/java/gallery.js"></script>
+<script type="module" src="/java/main.js"></script>
 
 </body>
 </html>
