--- a/items/adjustable-cotton-blindfold-black.html
+++ b/items/adjustable-cotton-blindfold-black.html
@@ -132,8 +132,10 @@
 
 
 <!-- SHARED SCRIPTS -->
-<script src="/js/item.js"></script>
-<script src="/js/floating-cart.js"></script>
+<script src="/java/floating-cart.js"></script>
+<script src="/java/gallery.js"></script>
+<script src="/java/items.js"></script>
+<script type="module" src="/java/main.js"></script>
 
 </body>
 </html>
