--- a/adult-legal-age.html
+++ b/adult-legal-age.html
@@ -201,8 +201,8 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 <!-- FLOATING CART -->
-<script src="floating-cart.js"></script>
-<script src="main.js"></script>
+<script src="/java/floating-cart.js"></script>
+<script type="module" src="/java/main.js"></script>
 
 </body>
 </html>
