--- a/Cart.html
+++ b/Cart.html
@@ -103,81 +103,84 @@
     <span class="cart-badge" id="cart-count">0</span>
   </a>
 
-  <!-- Cart Logic -->
-  <script>
-    function loadCart() {
-      const cart = JSON.parse(localStorage.getItem("cart")) || [];
-      const container = document.getElementById("cart-items");
-      const totalSpan = document.getElementById("cart-total");
+<!-- Cart Logic -->
+<script>
+  function loadCart() {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    const container = document.getElementById("cart-items");
+    const totalSpan = document.getElementById("cart-total");
 
-      if (cart.length === 0) {
-        container.innerHTML = "<p>Your cart is empty.</p>";
-        totalSpan.textContent = "0.00";
-        return;
-      }
+    if (cart.length === 0) {
+      container.innerHTML = "<p>Your cart is empty.</p>";
+      totalSpan.textContent = "0.00";
+      return;
+    }
 
-      let html = "";
-      let total = 0;
+    let html = "";
+    let total = 0;
 
-      cart.forEach((item, index) => {
-        html += `
-          <div class="cart-item">
-            <div class="cart-item-info">
-              ${item.name} — $${item.price.toFixed(2)}
-              <br>
-              <strong>$${item.total.toFixed(2)}</strong>
+    cart.forEach((item, index) => {
+      html += `
+        <div class="cart-item">
 
-              <div class="cart-qty-controls">
-                <button class="cart-qty-btn" onclick="changeQty(${index}, -1)">−</button>
-                <span class="cart-qty-display">${item.qty}</span>
-                <button class="cart-qty-btn" onclick="changeQty(${index}, 1)">+</button>
-              </div>
+          <!-- ⭐ NEW: Product Thumbnail -->
+          <img src="${item.img}" class="cart-thumb">
+
+          <div class="cart-item-info">
+            ${item.name} — $${item.price.toFixed(2)}
+            <br>
+            <strong>$${item.total.toFixed(2)}</strong>
+
+            <div class="cart-qty-controls">
+              <button class="cart-qty-btn" onclick="changeQty(${index}, -1)">−</button>
+              <span class="cart-qty-display">${item.qty}</span>
+              <button class="cart-qty-btn" onclick="changeQty(${index}, 1)">+</button>
             </div>
-
-            <button class="cart-remove" onclick="removeItem(${index})">Remove</button>
           </div>
-        `;
-        total += item.total;
-      });
 
-      container.innerHTML = html;
-      totalSpan.textContent = total.toFixed(2);
+          <button class="cart-remove" onclick="removeItem(${index})">Remove</button>
+        </div>
+      `;
+      total += item.total;
+    });
+
+    container.innerHTML = html;
+    totalSpan.textContent = total.toFixed(2);
+  }
+
+  function changeQty(index, change) {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    cart[index].qty += change;
+
+    if (cart[index].qty < 1) {
+      cart[index].qty = 1;
     }
 
-    function changeQty(index, change) {
-      const cart = JSON.parse(localStorage.getItem("cart")) || [];
-      cart[index].qty += change;
+    cart[index].total = cart[index].qty * cart[index].price;
 
-      if (cart[index].qty < 1) {
-        cart[index].qty = 1;
-      }
-
-      cart[index].total = cart[index].qty * cart[index].price;
-
-      localStorage.setItem("cart", JSON.stringify(cart));
-      loadCart();
-    }
-
-    function removeItem(index) {
-      const cart = JSON.parse(localStorage.getItem("cart")) || [];
-      cart.splice(index, 1);
-      localStorage.setItem("cart", JSON.stringify(cart));
-      loadCart();
-    }
-
-    function checkout() {
-      const total = document.getElementById("cart-total").textContent;
-
-      // Replace with your PayPal donation link
-      const paypalLink = `https://www.paypal.com/donate?hosted_button_id=YOUR_ID&amount=${total}`;
-
-      window.location.href = paypalLink;
-    }
-
-    document.getElementById("checkout-btn").addEventListener("click", checkout);
-
+    localStorage.setItem("cart", JSON.stringify(cart));
     loadCart();
-  </script>
+  }
+
+  function removeItem(index) {
+    const cart = JSON.parse(localStorage.getItem("cart")) || [];
+    cart.splice(index, 1);
+    localStorage.setItem("cart", JSON.stringify(cart));
+    loadCart();
+  }
+
+  function checkout() {
+    const total = document.getElementById("cart-total").textContent;
+
+    const paypalLink = `https://www.paypal.com/donate?hosted_button_id=YOUR_ID&amount=${total}`;
+    window.location.href = paypalLink;
+  }
+
+  document.getElementById("checkout-btn").addEventListener("click", checkout);
+
+  loadCart();
+</script>
+
 
 <!-- ===========================
      FOOTER
