Last updates hopefully

--- a/items/adjustable-cotton-blindfold-black.html
+++ b/items/adjustable-cotton-blindfold-black.html
@@ -40,9 +40,9 @@
 
             <!-- Main Menu -->
             <ul class="nav-menu">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About Selfary Expression.html">About</a></li>      
-                <li><a href="Selfary Expression Articles.html">Articles</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/About Selfary Expression.html">About</a></li>      
+                <li><a href="/Selfary Expression Articles.html">Articles</a></li>
 
                 <!-- EDUCATIONAL ITEMS -->
                 <li class="has-submenu">
@@ -54,9 +54,9 @@
                     </button>
 
                     <ul class="submenu">
-                        <li><a href="Endangered Species.html">Endangered Species</a></li>
-                        <li><a href="Flags.html">Flags</a></li>
-                        <li><a href="Maps.html">Maps</a></li>
+                        <li><a href="/Endangered Species.html">Endangered Species</a></li>
+                        <li><a href="/Flags.html">Flags</a></li>
+                        <li><a href="/Maps.html">Maps</a></li>
                     </ul>
                 </li>
 
@@ -70,8 +70,8 @@
                     </button>
 
                     <ul class="submenu">
-                        <li><a href="Adult Experience.html">Adult Experience</a></li>
-                        <li><a href="Inner Child.html">Inner Child</a></li>
+                        <li><a href="/Adult Experience.html">Adult Experience</a></li>
+                        <li><a href="/Inner Child.html">Inner Child</a></li>
                     </ul>
                 </li>            
 
