Finish generally speaking

--- a/items/adult-experience/Adjustable Silk Blindfold - Gray.html
+++ b/items/adult-experience/Adjustable Silk Blindfold - Gray.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Adjustable Cotton Blindfold - Black</title>
+    <title>Adjustable Silk Blindfold - Gray</title>
 
     <link rel="stylesheet" href="/css/style.css">
 
@@ -89,7 +89,7 @@
     <div class="item-image-wrapper">
 
       <!-- EDIT THESE: Add as many images as you want -->
-      <img src="/images/adult-items/Adjustable Cotton Blindfold - Black A.png" class="active">
+      <img src="/images/adult-items/Adjustable Silk Blindfold - Gray A.png" class="active">
       <!--  <img src="/images/sample/item2.webp">
       <img src="/images/sample/item3.webp">  -->
 
@@ -115,7 +115,7 @@
 
       <!-- ITEM ADD-TO-CART SECTION -->
       <div class="item-block"
-           data-name="Adjustable Cotton Blindfold - Black"
+           data-name="Adjustable Silk Blindfold - Gray"
            data-price="15">
 
         <label>Quantity:</label>
