--- a/items/adult-experience/Adjustable Cotton Blindfold - Black.html
+++ b/items/adult-experience/Adjustable Cotton Blindfold - Black.html
@@ -97,8 +97,8 @@
 
     <!-- Slider buttons -->
     <div class="slider-controls">
-      <button onclick="prevImage()">Previous</button>
-      <button onclick="nextImage()">Next</button>
+        <button class="prev-btn">Previous</button>
+        <button class="next-btn">Next</button>
     </div>
 
     <!-- ITEM DETAILS -->
@@ -147,7 +147,7 @@
 <!-- SHARED SCRIPTS -->
 <script src="/java/floating-cart.js"></script>
 <script src="/java/gallery.js"></script>
-<script src="/java/items.js"></script>
+<script src="java/items.js"></script>
 <script type="module" src="/java/main.js"></script>
 
 </body>
