--- a/items/adult-experience/Adjustable Cotton Blindfold - Black.html
+++ b/items/adult-experience/Adjustable Cotton Blindfold - Black.html
@@ -146,8 +146,7 @@
 
 <!-- SHARED SCRIPTS -->
 <script src="/java/floating-cart.js"></script>
-<script src="/java/gallery.js"></script>
-<script src="java/items.js"></script>
+<script src="/java/items.js"></script>
 <script type="module" src="/java/main.js"></script>
 
 </body>
